deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zumble-zay
  labels:
    app.kubernetes.io/name: zumble-zay
    app.kubernetes.io/component: backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: zumble-zay
    app.kubernetes.io/component: backend
  ports:
    - name: http
      port: 8080
      targetPort: http
